# LifeCanvas

./: .gitignore  README.md  conftest.py  create_shortcut.vbs  main.py  make_editable.py  pyproject.toml  requirements.txt  temp_patch.py
.github/workflows/: add-pdf-chart-compat-alias.yml  apply-cash-nisa-progress-feedback.yml  apply-feedback-fixes.yml  apply-full-debug-pdf-fix.yml  tests.yml  (+5 more)
core/: __init__.py  database.py  engine.py  project.py  report_generator.py  system_master.py
docs/: 00_PRD.md  01_REQUIREMENTS.md  02_SAMPLE_PROJECT.md  03_PROMPTS.md  04_EVENT_DRIVEN_ARCHITECTURE.md  04_ROADMAP.md  COMPLETION_DEBUG_AUDIT.md  IMPLEMENTATION_HOUSEHOLD_NISA_DEBT_UI.md  PRODUCT_SPEC.md  REQUIREMENTS_HOUSEHOLD_NISA_DEBT_UI.md  investment-ownership-design.md  sample_balance_diagnostic.txt
lifecanvas/: __init__.py
sample/: genki_family.json
scripts/: add_pdf_chart_compat_alias.py  apply_cash_nisa_progress_feedback.py  apply_feedback_fixes.py  apply_full_debug_pdf_fix.py  fix_nisa_cash_priority.py  fix_wife_target_recommendation.py  fix_wife_target_test.py
tests/: conftest.py  test_cashflow_events_and_insights.py  test_compact_policy_ui.py  test_completion_audit_logic.py  test_engine.py  test_family.py  test_full_interaction_debug.py  test_guided_planning.py  test_household_policy_phases.py  test_integration.py  test_legacy_plan_sync.py  test_pc_completion.py  test_pdf_nisa_policy.py  test_persistence.py  test_release_window_smoke.py  test_retirement_income.py  test_revision_features.py  test_timeline.py  test_wallet_engine.py
ui/: __init__.py  styles.py
(+67 files in other folders)
