[project]
name = "lifecanvas"
version = "0.1.0"
description = "Windows life planning simulator"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<3",
  "PySide6>=6.8,<7",
  "matplotlib>=3.9,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
