[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "lifecanvas"
version = "1.0.0"
description = "Modern Windows life planning simulator"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<3",
  "PySide6>=6.8,<7",
  "matplotlib>=3.9,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
